[package]
name = "custodial_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
rand = { version = "0.8.5", features = ["std"] }
getrandom = { version = "0.2.12", features = ["js"] }
serde = "1.0.197"
hex = "0.4.3"
serde_bytes = "0.11.14"
